# pyserial

./: CHANGES.rst  LICENSE  pyproject.toml
pyserial/: __init__.py  rfc2217.py  rs485.py  serialcli.py  serialjava.py  serialposix.py  serialutil.py  serialwin32.py
pyserial/threaded/: __init__.py
pyserial/tools/: hexlify_codec.py  list_ports.py  list_ports_linux.py  list_ports_osx.py  list_ports_posix.py  list_ports_windows.py  miniterm.py
pyserial/urlhandler/: protocol_alt.py  protocol_cp2110.py  protocol_hwgrep.py  protocol_loop.py  protocol_rfc2217.py  protocol_socket.py  protocol_spy.py
test/: run_all_tests.py  test.py  test_advanced.py  test_asyncio.py  test_cancel.py  test_close.py  test_context.py  test_exclusive.py  test_high_load.py  test_iolib.py  test_pty.py  test_readline.py  test_rfc2217.py  test_rs485.py  test_settings_dict.py  test_threaded.py  test_timeout_class.py  test_url.py  test_util.py
test/handlers/: protocol_test.py
